# claude-nogit

./: .gitignore  CLAUDE.md  LICENSE  README.md  autobox  claude-nogit  gitjail  install.sh  pyproject.toml
devcontainer/: Dockerfile  docker-proxy.py  entrypoint.sh  init-firewall.sh  tmux.conf
src/autobox_tui/: app.py  data.py
