[project]
name = "autobox-tui"
version = "0.1.0"
description = "Agent session manager for autobox"
requires-python = ">=3.10"
dependencies = ["textual>=3.0"]

[project.scripts]
autobox-agents = "autobox_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autobox_tui"]
